objects/Store_Type__c.object
<CustomObject>
    <fields>
        <fullName>Altcode__c</fullName>
        <description>Outbound Feed -  Pending for discussion.</description>
        <label>Altcode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Code__c</fullName>
        <label>Code</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DisplayOrder__c</fullName>
        <description>Outbound Feed - Pending for discussion</description>
        <label>DisplayOrder</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Display_Description__c</fullName>
        <label>Display Description</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TenantId__c</fullName>
        <description>Feed Outbound</description>
        <formula>&apos;ALORICAALTRIA&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TenantId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>isActive</label>
        <type>Checkbox</type>
    </fields>
    <label>Store Type</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Display_Description__c</columns>
        <columns>isActive__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{00}</displayFormat>
        <label>Store Type ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Store Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>